--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .NavBar {
-    background-color: black;
+    background-color: #585252;
 }
 
 .NavBar {
@@ -24,5 +24,5 @@ a {
 }
 
 a:hover {
-    color: goldenrod;
+    color: #daa520;
 }
