--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,13 +1,25 @@
 .itemcount {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 10px;
+    width: 100px;
+    height: 0px;
+    background-color: rgb(243, 243, 243);
+}
+
+.itemcount button {
+    font-size: medium;
+    border: none 1px;
+}
+
+.itemcount h1 {
+    font-size: medium;
 }
 
 
 .containerClicks {
-    width: 50px;
-    height: 60px;
+    
 }
 
 
